# simple_okf

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Dockerfile  E2E_TEST_SPEC.md  LICENSE  Makefile  OKF_RAG_7D_IMPLEMENTATION_SPEC.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.agents/skills/7d/: SKILL.md
.agents/skills/grillme/: SKILL.md
.agents/skills/okf/: SKILL.md
.pi/skills/okf/: SKILL.md
docs/: OKF_REFERENCE.md
mcp/: __init__.py  __main__.py  cli.py  okf.py  server.py
mcp/rag/: .env.example  .gitignore  __init__.py  config.py  corpus.py  models.py
mcp/rag/ingestion/: okf_parser.py
mcp/rag/retrieval/: __init__.py  local.py
mcp/scripts/: export_okf.py  generate_okf_graph.py  generate_okf_indexes.py  inspect_rag_corpus.py  rag_retrieve.py  refresh_rag_index.py  validate_okf.py
okf/: README.md  graph.html  graph.json  index.md
okf/api/: index.md
okf/api/operations/: index.md
okf/architecture/: index.md
okf/architecture/adr/: backend-rest-and-operator-provisioning.md  index.md
okf/data/: index.md
okf/data/entities/: index.md  onboarding-profile.md
okf/documents/: index.md
okf/platform-system/: index.md  log.md
okf/platform-system/data/: index.md
okf/platform-system/requirements/: index.md
okf/platform-system/traceability/: index.md
okf/requirements/: index.md
okf/requirements/access/: index.md
okf/requirements/flows/: first-reasoning-onboarding.md  index.md
okf/requirements/functions/: chat-link-capture.md  first-reasoning-analytics.md  index.md
okf/requirements/rules/: first-release-gaps.md  index.md
okf/ui/: index.md
okf/ui/design-system/: index.md
okf/ui/uikit/: index.md
okf/ui/ux/: first-reasoning.md  index.md  placeholder-page.md
okf_mcp/: __init__.py  __main__.py  cli.py  okf.py  server.py
okf_mcp/rag/: .env.example  __init__.py  config.py  corpus.py  embeddings.py  events.py  http.py  models.py  readiness.py
okf_mcp/rag/ingestion/: __init__.py  okf_parser.py
okf_mcp/rag/retrieval/: hybrid.py  local.py
okf_mcp/rag/storage/: __init__.py  clickhouse.py  opensearch.py  qdrant.py
okr/: graph.json  index.md
okr/api/: index.md
okr/architecture/: index.md
okr/architecture/adr/: index.md
okr/data/entities/: index.md
okr/documents/: index.md
okr/requirements/functions/: index.md
okr/requirements/rules/: index.md
platform-system/: index.md
platform-system/ui/: index.md
simple_okf_mcp/: __init__.py  cli.py
snapshots/kcmd/: README.md
src/okf_mcp/: __main__.py  okf.py  server.py
templates/okf/: api-operation.md  data-entity.md  source-document.md
tests/: test_okf_contract.py  test_rag_contract.py
(+20 files in other folders)
