[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "simple-okf-mcp"
version = "0.1.0"
description = "FastMCP server for local Open Knowledge Format bundles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "PyYAML>=6.0",
]

[project.scripts]
okf-mcp = "mcp.__main__:main"
okf-validate = "mcp.scripts.validate_okf:main"
okf-generate-indexes = "mcp.scripts.generate_okf_indexes:main"
okf-export = "mcp.scripts.export_okf:main"
okf-generate-graph = "mcp.scripts.generate_okf_graph:main"
okf-rag-inspect = "mcp.scripts.inspect_rag_corpus:main"
okf-rag-refresh = "mcp.scripts.refresh_rag_index:main"
okf-rag-retrieve = "mcp.scripts.rag_retrieve:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]
