[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "simple-okf-mcp"
version = "0.1.0"
description = "FastMCP server for local Open Knowledge Format bundles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "PyYAML>=6.0",
]

[project.scripts]
okf = "simple_okf_mcp.cli:main"
okf-mcp = "simple_okf_mcp.cli:server_main"
okf-validate = "simple_okf_mcp.cli:validate_main"
okf-generate-indexes = "simple_okf_mcp.cli:indexes_main"
okf-export = "simple_okf_mcp.cli:export_main"
okf-generate-graph = "simple_okf_mcp.cli:graph_main"
okf-rag-inspect = "simple_okf_mcp.cli:rag_inspect_main"
okf-rag-refresh = "simple_okf_mcp.cli:rag_refresh_main"
okf-rag-retrieve = "simple_okf_mcp.cli:rag_retrieve_main"
okf-7d = "simple_okf_mcp.cli:seven_d_main"

[tool.hatch.build.targets.wheel]
packages = ["mcp", "simple_okf_mcp"]
