[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "simple-okf-mcp"
version = "0.1.0"
description = "FastMCP server for local Open Knowledge Format bundles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "PyYAML>=6.0",
  "typer>=0.21.1",
]

[project.scripts]
okf = "okf_mcp.cli:main"
okf-mcp = "okf_mcp.cli:server_main"
okf-validate = "okf_mcp.cli:validate_main"
okf-generate-indexes = "okf_mcp.cli:indexes_main"
okf-export = "okf_mcp.cli:export_main"
okf-generate-graph = "okf_mcp.cli:graph_main"
okf-rag-inspect = "okf_mcp.cli:rag_inspect_main"
okf-rag-refresh = "okf_mcp.cli:rag_refresh_main"
okf-rag-retrieve = "okf_mcp.cli:rag_retrieve_main"
okf-7d = "okf_mcp.cli:seven_d_main"

[tool.hatch.build.targets.wheel]
packages = ["okf_mcp"]
